[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/OfcSelUI.gd" type="Script" id=1]
[ext_resource path="res://UI/OfcInfoRT.gd" type="Script" id=2]
[ext_resource path="res://UI/pop_shortcut.tres" type="ShortCut" id=3]

[node name="OfficerSelectUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="PanelContainer" parent="."]
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
margin_top = -2.3327
margin_bottom = -2.3327
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
margin_left = 7.0
margin_top = 7.0
margin_right = 505.0
margin_bottom = 293.0

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_right = 498.0
margin_bottom = 264.0
size_flags_vertical = 3

[node name="OfcInfoRT" type="RichTextLabel" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_right = 247.0
margin_bottom = 264.0
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="ItemList" type="ItemList" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 251.0
margin_right = 498.0
margin_bottom = 264.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_top = 268.0
margin_right = 498.0
margin_bottom = 286.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="ColorRect/VBoxContainer/menu"]
margin_right = 247.0
margin_bottom = 18.0
size_flags_horizontal = 3
shortcut = ExtResource( 3 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OK" type="Button" parent="ColorRect/VBoxContainer/menu"]
margin_left = 251.0
margin_right = 498.0
margin_bottom = 18.0
size_flags_horizontal = 3
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_change" from="ColorRect/VBoxContainer/HBoxContainer/OfcInfoRT" to="." method="_on_OfcInfoRT_value_change"]
[connection signal="item_activated" from="ColorRect/VBoxContainer/HBoxContainer/ItemList" to="." method="_on_ItemList_item_activated"]
[connection signal="item_selected" from="ColorRect/VBoxContainer/HBoxContainer/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="ColorRect/VBoxContainer/menu/Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/menu/OK" to="." method="_on_OK_pressed"]
